--- a/.github/workflows/bioinformatics-pipeline.yml
+++ b/.github/workflows/bioinformatics-pipeline.yml
@@ -1,4 +1,4 @@
-name: Bioinformatics Pipeline
+1name: Bioinformatics Pipeline
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
     steps:
       # Checkout the code from the repository
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: uses: actions/upload-artifact@v3
 
       # Set up R environment
       - name: Set up R
